--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@
 praw
 pillow
 asyncio
-git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py[voice]
+pyfiglet
+json-store-client
+git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py[voice] # Installs aiohttp
 
 # Server
 Flask
