--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pillow
 asyncio
 pyfiglet
 json-store-client
-git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py[voice] # Installs aiohttp
+git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py # Installs aiohttp
 
 # Server
 Flask
